--- a/index.ipynb
+++ b/index.ipynb
@@ -1079,7 +1079,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for city in city_indices:\n",
-    "    print(city[1])"
+    "    print(city)"
    ]
   },
   {
