--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,25 +1053,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'City': 'Buenos Aires', 'Country': 'Argentina', 'Population': 2891, 'Area': 203}\n",
-      "{'City': 'Toronto', 'Country': 'Canada', 'Population': 2732, 'Area': 630}\n",
-      "{'City': 'Marakesh', 'Country': 'Morocco', 'Population': 929, 'Area': 230}\n",
-      "{'City': 'Albuquerque', 'Country': 'USA', 'Population': 559, 'Area': 491}\n",
-      "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 288, 'Area': 3751}\n",
-      "{'City': 'Greenville', 'Country': 'USA', 'Population': 93, 'Area': 68}\n",
-      "{'City': 'Archipelago Sea', 'Country': 'Finland', 'Population': 60, 'Area': 2000}\n",
-      "{'City': 'Pyeongchang', 'Country': 'South Korea', 'Population': 44, 'Area': 1464}\n",
-      "{'City': 'Walla Walla Valley', 'Country': 'USA', 'Population': 33, 'Area': 35}\n",
-      "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 3, 'Area': 26}\n",
-      "{'City': 'Solta', 'Country': 'Croatia', 'Population': 2, 'Area': 59}\n",
-      "{'City': 'Iguazu Falls', 'Country': 'Argentina', 'Population': 0, 'Area': 2396}\n"
+      "Buenos Aires\n",
+      "Toronto\n",
+      "Marakesh\n",
+      "Albuquerque\n",
+      "Los Cabos\n",
+      "Greenville\n",
+      "Archipelago Sea\n",
+      "Pyeongchang\n",
+      "Walla Walla Valley\n",
+      "Salina Island\n",
+      "Solta\n",
+      "Iguazu Falls\n"
      ]
     }
    ],
@@ -1079,7 +1079,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices:\n",
-    "    print(cities[index][])"
+    "    print(cities[index]['City'])"
    ]
   },
   {
