--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,14 +1053,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
       "1\n",
       "2\n",
       "3\n",
@@ -1071,7 +1070,8 @@
       "8\n",
       "9\n",
       "10\n",
-      "11\n"
+      "11\n",
+      "12\n"
      ]
     }
    ],
@@ -1079,7 +1079,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices:\n",
-    "    print(index) #, cities[index]['City']"
+    "    print(index+1) #, cities[index]['City']"
    ]
   },
   {
