--- a/index.ipynb
+++ b/index.ipynb
@@ -1069,7 +1069,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices:\n",
-    "    print(f{index+1}) #, cities[index]['City']"
+    "    print(f'{index+1}) #, cities[index]['City']"
    ]
   },
   {
