--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,25 +1053,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n"
+      "1 .\n",
+      "2 .\n",
+      "3 .\n",
+      "4 .\n",
+      "5 .\n",
+      "6 .\n",
+      "7 .\n",
+      "8 .\n",
+      "9 .\n",
+      "10 .\n",
+      "11 .\n",
+      "12 .\n"
      ]
     }
    ],
@@ -1079,7 +1079,7 @@
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices:\n",
-    "    print(f'{index+1}',\"\") #, cities[index]['City']"
+    "    print(f'{index+1}','.') #, cities[index]['City']"
    ]
   },
   {
