--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,27 +1053,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1. Buenos Aires',\n",
-       " '2. Toronto',\n",
-       " '3. Marakesh',\n",
-       " '4. Albuquerque',\n",
-       " '5. Los Cabos',\n",
-       " '6. Greenville',\n",
-       " '7. Archipelago Sea',\n",
-       " '8. Pyeongchang',\n",
-       " '9. Walla Walla Valley',\n",
-       " '10. Salina Island',\n",
-       " '11. Solta',\n",
-       " '12. Iguazu Falls']"
+       "'1. Buenos Aires'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1072,7 @@
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices:\n",
     "    names_and_ranks.append(f'{index+1}'+'. '+cities[index]['City']) \n",
-    "names_and_ranks"
+    "names_and_ranks[0]"
    ]
   },
   {
