--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,16 +1053,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1. Buenos Aires'"
+       "'2. Toronto'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices:\n",
     "    names_and_ranks.append(f'{index+1}'+'. '+cities[index]['City']) \n",
-    "names_and_ranks[0]"
+    "names_and_ranks[-11]"
    ]
   },
   {
