--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,16 +1053,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2. Toronto'"
+       "['1. Buenos Aires',\n",
+       " '2. Toronto',\n",
+       " '3. Marakesh',\n",
+       " '4. Albuquerque',\n",
+       " '5. Los Cabos',\n",
+       " '6. Greenville',\n",
+       " '7. Archipelago Sea',\n",
+       " '8. Pyeongchang',\n",
+       " '9. Walla Walla Valley',\n",
+       " '10. Salina Island',\n",
+       " '11. Solta',\n",
+       " '12. Iguazu Falls']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,12 +1083,12 @@
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices:\n",
     "    names_and_ranks.append(f'{index+1}'+'. '+cities[index]['City']) \n",
-    "names_and_ranks[-11]"
+    "names_and_ranks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1097,7 @@
        "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
