--- a/index.ipynb
+++ b/index.ipynb
@@ -1083,7 +1083,8 @@
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices:\n",
     "    names_and_ranks.append(f'{index+1}'+'. '+cities[index]['City']) \n",
-    "names_and_ranks"
+    "names_and_ranks[0]\n",
+    "names_and_ranks[0]"
    ]
   },
   {
