Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,27 +1053,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1. Buenos Aires',\n",
-       " '2. Toronto',\n",
-       " '3. Marakesh',\n",
-       " '4. Albuquerque',\n",
-       " '5. Los Cabos',\n",
-       " '6. Greenville',\n",
-       " '7. Archipelago Sea',\n",
-       " '8. Pyeongchang',\n",
-       " '9. Walla Walla Valley',\n",
-       " '10. Salina Island',\n",
-       " '11. Solta',\n",
-       " '12. Iguazu Falls']"
+       "'2. Toronto'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1073,7 @@
     "for index in city_indices:\n",
     "    names_and_ranks.append(f'{index+1}'+'. '+cities[index]['City']) \n",
     "names_and_ranks[0]\n",
-    "names_and_ranks[0]"
+    "names_and_ranks[1]"
    ]
   },
   {
