Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,32 +1053,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2. Toronto'"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "for index in city_indices:\n",
-    "    names_and_ranks.append(f'{index+1}'+'. '+cities[index]['City']) \n",
-    "names_and_ranks[0]\n",
-    "names_and_ranks[1]"
+    "    names_and_ranks.append(f'{index+1}'+'. '+cities[index]['City']) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1074,7 @@
        "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
