--- a/index.ipynb
+++ b/index.ipynb
@@ -2097,10 +2097,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
+    "cities\n",
     "city_areas = []"
    ]
   },
