--- a/index.ipynb
+++ b/index.ipynb
@@ -2109,7 +2109,9 @@
     }
    ],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "for index in city_indices:\n",
+    "    names_and_ranks.append(f'{index+1}'+'. '+cities[index]['City'])"
    ]
   },
   {
