--- a/index.ipynb
+++ b/index.ipynb
@@ -2111,7 +2111,7 @@
    "source": [
     "city_areas = []\n",
     "for index in city_indices:\n",
-    "    names_and_ranks.append(f'{index+1}'+'. '+cities[index]['City'])"
+    "    city_areas.append(f'{index+1}'+'. '+cities[index]['City'])"
    ]
   },
   {
